# importlib-resources-example-2024

./: pyproject.toml
.github/workflows/: tests.yml
src/my_project/: df.py
src/my_project/data/: table.csv
tests/my_project/: test_df.py
